# flux-kcl-operator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
deploy/crds/: kcl-instance.yaml
deploy/examples/: configmap-example.yaml  kcl-instance.yaml  konfig-gitrepo.yaml  podinfo-gitrepo.yaml  secret-example.yaml
rust/crd/: Cargo.toml
rust/crd/src/: lib.rs
rust/fluxcd/: Cargo.toml
rust/fluxcd/src/downloader/: error.rs  mod.rs
rust/fluxcd/src/types/: git_repository.rs  mod.rs  oci_repository.rs
rust/kcl-client/: Cargo.toml
rust/kcl-client/src/: git.rs  lib.rs  oci.rs
rust/operator-binary/: Cargo.toml
rust/operator-binary/src/: controller.rs  engine.rs  event.rs  fetcher.rs  finalizer.rs  instance_ext.rs  lib.rs  main.rs  utils.rs
