[workspace]
members = ["rust/fluxcd", "rust/crd", "rust/operator-binary"]
resolver = "2"

[workspace.package]
version = "0.0.0-dev"
authors = ["Kirillov Aleksandr <kirillov@evrone.com>"]
edition = "2021"
# license = "MIT"
# repository = "https://github.com/kcl-lang/kcl"

[workspace.dependencies]
anyhow = "1.0"
built = { version = "0.7", features = ["chrono", "git2"] }
clap = "4.5"
futures = { version = "0.3", features = ["compat"] }
humantime = "2.1.0"
k8s-openapi = { version = "0.23.0" }
product-config = { git = "https://github.com/stackabletech/product-config.git", tag = "0.7.0" }
rand = "0.8"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
snafu = "0.8"
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "stackable-operator-0.80.0" }
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
url = { version = "2.5.2" }
