[workspace]
members = ["rust/fluxcd", "rust/kcl-client", "rust/crd", "rust/operator-binary"]
resolver = "2"

[workspace.package]
version = "0.0.0-dev"
authors = ["Kirillov Aleksandr <kirillov@evrone.com>"]
edition = "2021"
# license = "MIT"
# repository = "https://github.com/kcl-lang/kcl"

[workspace.dependencies]
anyhow = "1.0"
built = { version = "0.7", features = ["chrono", "git2"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures = { version = "0.3", features = ["compat"] }
futures-util = "0.3.31"
humantime = "2.1.0"
k8s-openapi = { version = "0.23.0", features = ["v1_31", "schemars"] }
kube = { version = "0.96.0", default-features = true, features = [
  "derive",
  "runtime",
] }
rand = "0.8"
semver = "1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "0.9"
schemars = "0.8.21"
snafu = "0.8"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "registry",
  "env-filter",
  "json",
] }
url = { version = "2.5.2" }
reqwest = { version = "0.12.9", features = ["json", "stream"] }
