[package]
name = "flux-kcl-operator-crd"
description = "Contains the CRD for the Flux KCL Operator"
version.workspace = true
authors.workspace = true
edition.workspace = true
# license.workspace = true
# repository.workspace = true
publish = false

[dependencies]
k8s-openapi.workspace = true
humantime.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
stackable-operator.workspace = true
strum.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
