[package]
name = "fluxcd-rs"
description = "This crate defines a set of common utilities for working with FluxCD custom resources in Kubernetes operators"
version.workspace = true
authors.workspace = true
edition.workspace = true
# license.workspace = true
# repository.workspace = true
publish = false

[dependencies]
k8s-openapi.workspace = true
kube.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
snafu.workspace = true
strum.workspace = true
tracing.workspace = true
url.workspace = true

tar = "0.4.43"
flate2 = "1.0.34"
reqwest-middleware = "0.3.3"
reqwest-retry = "0.6.1"

[dev-dependencies]
serde_yaml.workspace = true
