[package]
name = "kcl-client"
description = "KCL client for the Flux KCL Operator"
version.workspace = true
authors.workspace = true
edition.workspace = true
# license.workspace = true
# repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
strum.workspace = true
tracing.workspace = true

# KCL dependencies
kclvm-ast = { git = "https://github.com/kcl-lang/kcl", version = "0.10.8" }
kclvm-runtime = { git = "https://github.com/kcl-lang/kcl", version = "0.10.8" }
kclvm-runner = { git = "https://github.com/kcl-lang/kcl", version = "0.10.8" }
kclvm-parser = { git = "https://github.com/kcl-lang/kcl", version = "0.10.8" }
kclvm-driver = { git = "https://github.com/kcl-lang/kcl", version = "0.10.8" }
kclvm-config = { git = "https://github.com/kcl-lang/kcl", version = "0.10.8" }
kclvm-utils = { git = "https://github.com/kcl-lang/kcl", version = "0.10.8" }
oci-distribution = { version = "0.11.0", default-features = false, features = [
  "rustls-tls",
] }
walkdir = "2.5.0"
flate2 = "1.0.34"
tar = "0.4.43"
indexmap = "2.6.0"

[dev-dependencies]
serde_yaml.workspace = true
