[package]
name = "flux-kcl-operator"
description = "Operator for manage Flux KCL Instances"
version.workspace = true
authors.workspace = true
edition.workspace = true
# license.workspace = true
# repository.workspace = true
publish = false

[dependencies]
flux-kcl-operator-crd = { path = "../crd" }

anyhow.workspace = true
clap.workspace = true
# fnv.workspace = true
futures.workspace = true
# indoc.workspace = true
# pin-project.workspace = true
rand.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
stackable-operator.workspace = true
product-config.workspace = true
strum.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[build-dependencies]
built.workspace = true
